--- a/hugo.yaml
+++ b/hugo.yaml
@@ -3,7 +3,6 @@ languageCode: pt-BR
 title: Diário Dev
 theme: ["PaperMod"]
 
-
 enableRobotsTXT: true
 buildDrafts: false
 buildFuture: false
@@ -13,12 +12,25 @@ minify:
   disableXML: true
   minifyOutput: true
 
+menu:
+  main:
+    - name: Pesquisa
+      url: search/
+      weight: 5
+
+pygmentsUseClasses: true
+markup:
+  highlight:
+    noClasses: false
+    
+defaultContentLanguage: "pt"
+
 params:
   env: production
   title: Diário Dev
   description: "Diário Dev é um blog pessoal sobre desenvolvimento de software, tecnologia e outras coisas."
   author: Cristopher Parrela
-  DateFormat: "2 January 2006"
+  DateFormat: "02/01/2006"
   defaultTheme: auto # dark, light
   disableThemeToggle: false
   ShowReadingTime: true
@@ -36,13 +48,12 @@ params:
   comments: true
   hidemeta: false
   hideSummary: false
+  displayFullLangName: true
 
-  # assets:
-  #   favicon: "<link / abs url>"
-  #   favicon16x16: "<link / abs url>"
-  #   favicon32x32: "<link / abs url>"
-  #   apple_touch_icon: "<link / abs url>"
-  #   safari_pinned_tab: "<link / abs url>"
+  assets:
+    favicon: "favicon.png"
+    favicon16x16: "favicon.png"
+    favicon32x32: "favicon.png"
 
   label:
     text: "Diário Dev"
@@ -69,13 +80,6 @@ params:
   #   yandex:
   #     SiteVerificationTag: "XYZabc"
 
-  # cover:
-  #   hidden: true # hide everywhere but not in structured data
-  #   hiddenInList: true # hide on list pages and home
-  #   hiddenInSingle: true # hide on single page
-
-  # for search
-  # https://fusejs.io/api/options.html
   fuseOpts:
     isCaseSensitive: false
     shouldSort: true
@@ -83,22 +87,35 @@ params:
     distance: 1000
     threshold: 0.4
     minMatchCharLength: 0
-    limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
+    limit: 10
     keys: ["title", "permalink", "summary", "content"]
 
-menu:
-  main:
-    - name: Pesquisa
-      url: search/
-      weight: 5
-
-# Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
-pygmentsUseClasses: true
-markup:
-  highlight:
-    noClasses: false
-    # anchorLineNos: true
-    # codeFences: true
-    # guessSyntax: true
-    # lineNos: true
-    # style: monokai
+languages:
+  pt:
+    languageName: "Português"
+    weight: 1
+    contentDir: "content/pt"
+    title: "Diário Dev"
+    description: "Diário Dev é um blog pessoal sobre desenvolvimento de software, tecnologia e outras coisas."
+    params:
+      author: Cristopher Parrela
+      DateFormat: "02/01/2006"
+    menu:
+      main:
+        - name: "Pesquisa"
+          url: "search"
+          weight: 5
+  en:
+    languageName: "English"
+    weight: 2
+    contentDir: "content/en"
+    title: "Dev Diary"
+    description: "Dev Diary is a personal blog about software development, technology, and other things."
+    params:
+      author: Cristopher Parrela
+      DateFormat: "January 2, 2006"
+    menu:
+      main:
+        - name: "Search"
+          url: "search"
+          weight: 5
