--- a/hugo.yaml
+++ b/hugo.yaml
@@ -83,9 +83,10 @@ params:
   displayFullLangName: true
 
   assets:
-    favicon: "favicon.png"
-    favicon16x16: "favicon.png"
-    favicon32x32: "favicon.png"
+    favicon: "favicon.ico"
+    favicon16x16: "favicon-16x16.png"
+    favicon32x32: "favicon-32x32.png"
+    apple_touch_icon: "apple-touch-icon.png"
 
   socialIcons:
     - name: linkedin
